sandc/test/fixtures/astRegression/shouldSucceed/productions/classItem/ClassConstructorDeclaration.sand
pub class ParenthesizedFormalMethodParamDeclarations {
    new() {

    }

    pub new() {

    }

    prot new() {

    }

    new(arg1: int, arg2: Foo) {
        
    }
}