sandc/test/fixtures/astRegression/shouldFail/productions/anonymousInnerClassInstantiationExpression/UninitializedInstanceProperty.sand
pub class UninitializedInstanceProperty {
    foo() {
        new Foo {
            x: int;
        }
    }
}